# contactos_back

./: .gitignore  .gitlab-ci.yml  Pipfile  README.md  gitlab-ci.yml  pyproject.toml  requirements.txt
contactosapi/: .coverage  env.example  manage.py
contactosapi/agenda/: admin.py  filters.py  models.py  serializers.py  urls.py  views.py
contactosapi/agenda/fixtures/: cargo.yaml  colectivo.yaml  pais.yaml  persona.yaml  provincia.yaml  subcolectivo.yaml  telefono.yaml  tratamiento.yaml  users.yaml
contactosapi/agenda/migrations/: 0001_initial.py  0001_squashed_0005_auto_20200601_1022.py  0002_auto_20200529_0925.py  0002_auto_20200601_1110.py  0002_auto_20200708_1005.py  0002_auto_20210920_1907.py  0003_alter_persona_options.py  0003_auto_20200529_0925.py  0003_auto_20200601_1120.py  0004_auto_20200601_1203.py  0004_cargo_persona.py  0005_auto_20200601_1022.py  0005_correo_otrocontacto_telefono.py  0006_auto_20200602_1333.py  0007_auto_20200617_1407.py  0008_auto_20200625_1917.py  0009_auto_20200630_2258.py  0010_auto_20200707_1328.py  0011_auto_20200707_1340.py
contactosapi/agenda/tests/: test_busqueda.py  test_cargo.py  test_colectivo.py  test_pais.py  test_persona.py  test_provincia.py  test_subcolectivo.py  test_user.py  (+2 more)
contactosapi/contactosapi/: asgi.py  settings.py  urls.py  wsgi.py
contactosapi/listas/: admin.py  models.py  serializers.py  urls.py  views.py
contactosapi/mail_templates/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
contactosapi/marcas/: admin.py  models.py  serializers.py  urls.py  views.py
docs/: logging.conf  migration_tool.py  original_models.py
(+11 files in other folders)
