[tool.poetry]
name = "contactosapi"
version = "0.1.0"
description = "Backend para la aplicación de Contactos"
authors = ["Roberto <rbarrero@posteo.net>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "*"
djangorestframework = "*"
markdown = "*"
django-extensions = "*"
mysqlclient = "*"
openpyxl = "*"
django-auth-ldap = "*"
reportlab = "*"
peewee = "*"
pygments = "*"
django-cors-headers = "*"

[tool.poetry.dev-dependencies]
django-debug-toolbar = "*"
autopep8 = "*"
werkzeug = "*"
peewee = "*"
pylint = "*"
pymysql = "*"
black = {version = "^21.6b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
